[gd_scene load_steps=10 format=3 uid="uid://b768sgio26iig"]

[ext_resource type="Script" uid="uid://cb4pjumoxre8p" path="res://puzle_nunca_cuatro.gd" id="1_y8jj1"]
[ext_resource type="Texture2D" uid="uid://nntgcxecrxrf" path="res://vacio.jpg" id="2_1uktq"]
[ext_resource type="Texture2D" uid="uid://vquhted1ctwl" path="res://circulo.jpg" id="3_lh1m1"]
[ext_resource type="Texture2D" uid="uid://hutpqm52xa8b" path="res://equis.jpg" id="4_0muox"]
[ext_resource type="Texture2D" uid="uid://cpbn7om7qi2ko" path="res://negro.jpg" id="5_prf5h"]
[ext_resource type="Texture2D" uid="uid://b5qqfl161s3w8" path="res://patronhierba.png" id="6_0muox"]
[ext_resource type="Texture2D" uid="uid://ysro0p0c783h" path="res://Capi2.png" id="7_prf5h"]
[ext_resource type="Texture2D" uid="uid://bnh2r5f7c47l3" path="res://Capi3.png" id="8_prf5h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0muox"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_prf5h")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_prf5h")
}, {
"duration": 1.0,
"texture": ExtResource("8_prf5h")
}],
"loop": true,
"name": &"talking",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y8jj1")
tex_vacia = ExtResource("2_1uktq")
tex_circulo = ExtResource("3_lh1m1")
tex_cruz = ExtResource("4_0muox")
tex_bloqueada = ExtResource("5_prf5h")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_0muox")

[node name="LayoutPrincipal" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelCapi" type="VBoxContainer" parent="LayoutPrincipal"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="CapiAnim" type="AnimatedSprite2D" parent="LayoutPrincipal/PanelCapi"]
auto_translate_mode = 1
position = Vector2(345, 690)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_0muox")
animation = &"idle"

[node name="LabelMensaje" type="Label" parent="LayoutPrincipal/PanelCapi"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="LayoutPrincipal"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="PuzzleLayout" type="VBoxContainer" parent="LayoutPrincipal/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="LabelTiempo" type="Label" parent="LayoutPrincipal/CenterContainer/PuzzleLayout"]
layout_mode = 2
horizontal_alignment = 1

[node name="Cuadricula" type="GridContainer" parent="LayoutPrincipal/CenterContainer/PuzzleLayout"]
layout_mode = 2
columns = 12

[node name="ButtonLayout" type="HBoxContainer" parent="LayoutPrincipal/CenterContainer/PuzzleLayout"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="BotonComprobar" type="Button" parent="LayoutPrincipal/CenterContainer/PuzzleLayout/ButtonLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0.52100307, 1, 0.5765099, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.3776325, 0.73978424, 0.43815508, 1)
text = "Comprobar"

[node name="BotonSalir" type="Button" parent="LayoutPrincipal/CenterContainer/PuzzleLayout/ButtonLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0.96280235, 0.2449837, 0.36194044, 1)
theme_override_colors/font_hover_color = Color(0.9545086, 0.28157738, 0.23671526, 1)
text = "Salir"

[node name="TimerJuego" type="Timer" parent="."]
autostart = true
